added cosmetic changes

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,3 @@
-<h4>Job Portal App</h4>
+<h4>Job Portal App 1</h4>
 
 <%= link_to "Candidate Signup", "candidates/new" %> | <%= link_to "Candidate Login", "main/selectcandidate" %> | <%= link_to "Recruiter Login", "recruiterhome" %>
